# CodeAdvent

./: .gitignore  README.md
2020/Day0/: Part1.py  code.js  code.ts
2020/Day01/: Day1-1.py  Day1-2.py
2020/Day02/: Day2-1.py  Day2-2.py
2020/Day03/: Day3-2.py
2020/Day04/: Day4-1.py  Day4-2.py
2020/Day05/: Day5-2.py
2020/Day06/: Day6-1.py
2020/Day07/: Day7-1.py  Day7-2.py
2020/Day08/: Day8-1.py
2020/Day09/: Day9-1.py
2020/Day10/: Day10-1.py  Day10-2.py
2020/Day11/: Day11-1.py  Day11-2.py
2020/Day12/: Part1.py  Part2.py
2020/Day13/: Part1.py  Part2.py
2020/Day14/: Part1.py  Part2.py
2020/Day15/: Part1.py  Part2.py
2020/Day16/: Part1.py  Part2.py
2020/Day17/: Part1.py  Part2.py
2020/Day18/: Part1.py  Part2.py
2020/Day19/: Input2.txt  Part1.py  Part2.py
2020/Day20/: Part1.py  Part2.py
2020/Day21/: Part1.py  Part2.py
2020/Day22/: Part1.py  Part2.py
2020/Day23/: Part1.py  Part2.py  Part2attempt2.py
2020/Day24/: Part1.py  Part1Try2.py  Part2.py
2020/Day25/: Part1.py
2020/Day3/: Day3-1.py
2020/Day5/: Day5-1.py
2020/Day6/: Day6-2.py
2020/Day8/: Day8-2.py
2020/Day9/: Day9-2.py
2021/: CodeAdvent2021.cabal  Commands.txt
2021/Days/: Current.hs  Part1.hs  Test.hs
2021/Days/Day01/: Main.hs  Part1.hs  Part2.hs
2021/Days/Day02/: Part1.hs  Part2.hs
2021/Days/Day03/: Part1.hs  Part2.hs
2021/Days/Day04/: Part1.hs  Part2.hs
2021/Days/Day05/: Part1.hs  Part2.hs
2021/Days/Day06/: Part1.hs  Part2.hs
2021/Days/Day07/: Part1.hs  Part2.hs
2021/Days/Day08/: Part1.hs  Part2.hs
