cabal-version:      2.4
name:               CodeAdvent2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Luke Leonard (Carly)
maintainer:         Leonard.luke@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Main
    main-is:          Current.hs

    -- Modules included in this executable, other than Main.
    --other-modules:    

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                        split ^>= 0.2.2,
                        containers
    hs-source-dirs:   Days
    default-language: Haskell2010
    -- other-modules:      Day01.Part1

-- Test-Suite Day01-Tests
--     type:               exitcode-stdio-1.0
--     main-is:            Test.hs
--     build-depends:      base,
--                         test-framework,
--                         test-framework-hunit,
--                         HUnit
--     hs-source-dirs:     Days
--     default-language:   Haskell2010
--     other-modules:      Day01.Part1
